# rust-world-spr23

./: .gitignore  Cargo.toml  Makefile  README.md  release.sh  setup.sh  todolist.md
actix-containerized-microservice-wk3/actixdocker/: Cargo.toml  Dockerfile  Makefile  README.md  backup.md  docker-compose.yml
actix-containerized-microservice-wk3/actixdocker/src/: lib.rs  main.rs
actix-json-formatter/: Cargo.toml  Makefile
actix-json-formatter/src/: lib.rs  main.rs  rust-aws-s3
ai-services/: Cargo.toml
ai-services/ui/: index.html
big-data-proj-not-working/: Cargo.toml  README.md
chat-actix/: Cargo.toml
chat-actix/src/: chatbot.rs  handlers.rs  main.rs
chat-actix/ui/: index.html  index.js
chat-web/: Cargo.toml
chat-web/src/: main.rs
chatbot/: README.md
efs/: Cargo.toml  README.md
final-prj/: README.md
hwk1-battleship/: README  v1Overview.txt
hwk1-battleship/goal1/: task0.txt  task1.txt  task4.txt  task7.txt  task9.txt
hwk1-battleship/goal4/: task16.txt
lambda-rand-fact-prj3/: Cargo.toml  README.md  serverless.yaml
models/files/: Cargo.toml
models/files/src/: lib.rs
mongo-db-query-covid19-api-data/: README.md
mongo-db-query-covid19-api-data/src/: main.rs
music-recommendation-service-with-spotify-api/: Cargo.toml  README.md
music-recommendation-service-with-spotify-api/src/: main.rs
myawsdynamodb/: Cargo.toml  README.md
myawsdynamodb/src/: main.rs
project2/: Cargo.toml
project2/src/: lib.rs  main.rs
resources/ece651-dev-setup/: clang-format  emacs-config.sh  mac-paste.sh  packages-linux.sh  packages-mac.sh
resources/ece651-dev-setup/doc/: walkthrough.aux  walkthrough.out  walkthrough.tex
src/: main.rs
summarize/: Cargo.toml  Dockerfile  README.md  summarize-service.yaml
summarize-openai/: Cargo.toml
summarize-openai-prj4/: Cargo.toml  Dockerfile  Makefile  README.md  summarize-deployment.yaml
summarize-openai-prj4/src/: main.rs
summarize-openai-prj4/ui/: index.html
summarize-openai/src/: main.rs
summarize/src/: main.rs
summarize/ui/: index.html
temp/src/: main.rs
week1/: Cargo.toml  README.md
week1/src/: lib.rs  main.rs
week10/: Cargo.toml  README.md
week10/src/: errors.rs  main.rs
week10/src/products/: mod.rs  routes.rs
week11/: Cargo.toml  README.md
week12/: Makefile  README.md  serverless.yaml
week12/.serverless/: cloudformation-template-update-stack.json
week12/src/: main.rs
week12/ui/: index.html
week13/: README.md
week13/.serverless/: serverless-state.json
week14/: Cargo.toml
week14/src/: main.rs
week2/: Cargo.toml  Makefile  README.md
week2-2/src/: lib.rs  main.rs
week2/my-first-lambda-function/: Cargo.toml  README.md
week2/my-first-lambda-function/src/: lib.rs  main.rs
week2/src/: lib.rs  main.rs
week3/: Cargo.toml  Makefile  README.md  a.txt  abc.txt
week3/src/: lib.rs  main.rs
week4/: Cargo.toml  Makefile  README.md
week4-2/: Cargo.toml  README.md
week4-2/edgedetection/: Cargo.toml  README.md
week4-2/edgedetection/src/: main.rs
week4-2/src/: main.rs
week4/src/: lib.rs  main.rs
week5/: Cargo.toml
week5/ml/: Cargo.toml
week5/ml/src/: main.rs
week5/src/: main.rs
week6/: Cargo.toml  README.md  build.rs
week6/include/: blobstore.h
week6/src/: blobstore.cc  main.rs
week7/: Cargo.toml
week7/src/: main.rs
week8/: Cargo.toml  README.md  serverless.yaml
week8/.serverless/: cloudformation-template-update-stack.json  serverless-state.json
week8/src/: main.rs
week9/: Cargo.toml  README.md
week9/src/: main.rs
