[package]
name = "actixjsonformatter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
rand = "0.8.4"

aws-config = "0.54.1"
# We are using the Amazon Simple Storage Service (Amazon S3) crate in this example,
# but you can use any SDK crate in your Lambda code.
aws-sdk-s3 = "0.24.0"
tokio = { version = "1", features = ["full"] }
clap = {version="4.0.32", features=["derive"]}
aws-sdk-dynamodb = "0.24.0"

serde = "1"
log = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# NOTE: the following crate is not part of the SDK, but it is maintained by AWS.
lambda_runtime = "0.7.3"