[package]
name = "big-data-proj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.2.1"
tabulate = "1.2.0"
actix-web = "4.3.1"
actix-rt = "2.8.0"
actix-files = "0.6.2"
futures = "0.3.15"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"