[package]
name = "summarize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["json"] }
tokio = { version = "1.9.0", features = ["full"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"

actix-web = "4.0.0-beta.8"
actix-rt = "2.2.0"

dotenv = "0.15.0"
actix-files = "0.6.2"
