[package]
name = "rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_dynamodb = "0.48.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde_derive = "1.0.130"
#serde_dynamodb_derive = "0.8.0"
futures = "0.3.17"
rusoto_core = {version = "0.48.0", default_features = false, features = ["rustls"]}
dynomite = "0.10.0"

uuid = { version = "1.3.0", features = ["serde", "v4"] }
anyhow = "1.0"


#serde_dynamodb = "0.9.0"

