[package]
name = "dadjoke"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.138", features = ["derive"] }
tokio = { version = "1.19.2", features = ["full"] }
serde_json = "1.0.82"
lambda_runtime = "0.7.3"
aws_lambda_events = "0.7.3"
reqwest = { version = "0.11.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }