[package]
name = "dadjoke"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.7.3"
lambda_http = "0.7.0" # AWS Lambda Runtime
tokio = "1.21.2" # for async networking
serde = { version = "1.0.147", features = ["derive"] } # for JSON serialization
serde_json = "1.0"
rand = "0.8.5"
aws_lambda_events = "0.7.3"
reqwest = { version = "0.11.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }