[package]
name = "week10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "5.0.7"
async-graphql-actix-web = "5.0.7"
actix-web = { version = "4.0.1", default-features = false, features = ["macros"] }
files = { path = "../models/files" }