[package]
name = "week9"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
mongodb = "2"
tokio = "1.21.2" # for async networking
serde = { version = "1.0.147", features = ["derive"] } # for serialization